// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 empty 1`] = `
Object {
  "counter": 4,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 4,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 multiple words 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 single word 1`] = `
Object {
  "counter": 7,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 7,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with closing sequence different number of syntax characters 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 17,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with closing sequence random syntax characters 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 22,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with closing sequence random syntax characters and trailing whitespace  1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 25,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with closing sequence same number of syntax characters 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 16,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with closing sequence trailing whitespace 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 19,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested delete 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 14,
          "type": "delete",
        },
      ],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested emphasis 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 12,
          "type": "emphasis",
        },
      ],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested inlineCode 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 12,
          "type": "inlineCode",
        },
      ],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested strong 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 14,
          "type": "strong",
        },
      ],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace inner 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace inner and trailing 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace leading 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace leading and inner 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 9,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace leading and trailing 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 9,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace trailing 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 empty 1`] = `
Object {
  "counter": 5,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 5,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 multiple words 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 single word 1`] = `
Object {
  "counter": 8,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 8,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with closing sequence different number of syntax characters 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 19,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with closing sequence random syntax characters 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 23,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with closing sequence random syntax characters and trailing whitespace  1`] = `
Object {
  "counter": 27,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 26,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 27,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with closing sequence same number of syntax characters 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 18,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with closing sequence trailing whitespace 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 21,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested delete 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 15,
          "type": "delete",
        },
      ],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested emphasis 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 13,
          "type": "emphasis",
        },
      ],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested inlineCode 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 13,
          "type": "inlineCode",
        },
      ],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested strong 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 15,
          "type": "strong",
        },
      ],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace inner 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace inner and trailing 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace leading 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace leading and inner 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 10,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace leading and trailing 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 25,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 10,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 25,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace trailing 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 empty 1`] = `
Object {
  "counter": 6,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 6,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 multiple words 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 single word 1`] = `
Object {
  "counter": 9,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 9,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with closing sequence different number of syntax characters 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 21,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with closing sequence random syntax characters 1`] = `
Object {
  "counter": 25,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 24,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 25,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with closing sequence random syntax characters and trailing whitespace  1`] = `
Object {
  "counter": 28,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 27,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 28,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with closing sequence same number of syntax characters 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 20,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with closing sequence trailing whitespace 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 23,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested delete 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 16,
          "type": "delete",
        },
      ],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested emphasis 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 14,
          "type": "emphasis",
        },
      ],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested inlineCode 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 14,
          "type": "inlineCode",
        },
      ],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested strong 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 16,
          "type": "strong",
        },
      ],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace inner 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace inner and trailing 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace leading 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace leading and inner 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 11,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace leading and trailing 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 11,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace trailing 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 empty 1`] = `
Object {
  "counter": 7,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 7,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 multiple words 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 single word 1`] = `
Object {
  "counter": 10,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 10,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with closing sequence different number of syntax characters 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 23,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with closing sequence random syntax characters 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 25,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with closing sequence random syntax characters and trailing whitespace  1`] = `
Object {
  "counter": 29,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 28,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 29,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with closing sequence same number of syntax characters 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 22,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with closing sequence trailing whitespace 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 25,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested delete 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 17,
          "type": "delete",
        },
      ],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested emphasis 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 15,
          "type": "emphasis",
        },
      ],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested inlineCode 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 15,
          "type": "inlineCode",
        },
      ],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested strong 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 17,
          "type": "strong",
        },
      ],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace inner 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 9,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace inner and trailing 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 9,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace leading 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 9,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace leading and inner 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 12,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace leading and trailing 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 9,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 27,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 12,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 27,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace trailing 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 empty 1`] = `
Object {
  "counter": 8,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 8,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 multiple words 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 single word 1`] = `
Object {
  "counter": 11,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 11,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with closing sequence different number of syntax characters 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
    Object {
      "from": 18,
      "to": 25,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with closing sequence random syntax characters 1`] = `
Object {
  "counter": 27,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
    Object {
      "from": 18,
      "to": 26,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 27,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with closing sequence random syntax characters and trailing whitespace  1`] = `
Object {
  "counter": 30,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
    Object {
      "from": 18,
      "to": 29,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 30,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with closing sequence same number of syntax characters 1`] = `
Object {
  "counter": 25,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
    Object {
      "from": 18,
      "to": 24,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 25,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with closing sequence trailing whitespace 1`] = `
Object {
  "counter": 28,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
    Object {
      "from": 18,
      "to": 27,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 28,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested delete 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 18,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 18,
          "type": "delete",
        },
      ],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested emphasis 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 16,
          "type": "emphasis",
        },
      ],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested inlineCode 1`] = `
Object {
  "counter": 21,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 16,
          "type": "inlineCode",
        },
      ],
      "to": 21,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested strong 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 18,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 18,
          "type": "strong",
        },
      ],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace inner 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 10,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace inner and trailing 1`] = `
Object {
  "counter": 25,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 10,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 25,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace leading 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 10,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace leading and inner 1`] = `
Object {
  "counter": 25,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 13,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 25,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace leading and trailing 1`] = `
Object {
  "counter": 25,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 10,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 25,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 28,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 13,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 28,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace trailing 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 empty 1`] = `
Object {
  "counter": 9,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 9,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 multiple words 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 single word 1`] = `
Object {
  "counter": 12,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 12,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with closing sequence different number of syntax characters 1`] = `
Object {
  "counter": 28,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 19,
      "to": 27,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 28,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with closing sequence random syntax characters 1`] = `
Object {
  "counter": 28,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 19,
      "to": 27,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 28,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with closing sequence random syntax characters and trailing whitespace  1`] = `
Object {
  "counter": 31,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 19,
      "to": 30,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 31,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with closing sequence same number of syntax characters 1`] = `
Object {
  "counter": 27,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 19,
      "to": 26,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 27,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with closing sequence trailing whitespace 1`] = `
Object {
  "counter": 30,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 19,
      "to": 29,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 30,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested delete 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 19,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 19,
          "type": "delete",
        },
      ],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested emphasis 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 17,
          "type": "emphasis",
        },
      ],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested inlineCode 1`] = `
Object {
  "counter": 22,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 17,
          "type": "inlineCode",
        },
      ],
      "to": 22,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested strong 1`] = `
Object {
  "counter": 24,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 19,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 19,
          "type": "strong",
        },
      ],
      "to": 24,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace inner 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 11,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace inner and trailing 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 11,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace leading 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 11,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace leading and inner 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 14,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace leading and trailing 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 11,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 29,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 14,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 29,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace trailing 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;
